--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ img{
     text-align: center;
     margin-top: 100px;
 }
+
+.ll{
+    color: lightblue;
+}
+.ll:hover{
+    color:orange;
+}
+
 .btn {
     margin : 0 30px 0 30px;
     background: #31e0da;
@@ -45,3 +53,10 @@ img{
     background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
     text-decoration: none;
   }
+
+#hist{
+    top:50px;
+    right: 110px;;
+    position: absolute;
+    display: inline-block;
+}
